--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-jedi-utilities",
   "version": "0.0.1",
-  "homepage": "https://github.com/ng-jedi/utilities",
+  "homepage": "https://github.com/jediproject/ng-jedi-utilities",
   "authors": [
     "Fábio Henrique da Silva Viana <fabioviana.bh@gmail.com>"
   ],
