--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "grunt-contrib-uglify": "~0.2.1",
     "grunt": "~0.4.1"
   },
-  "main": [
-    "utilities.js"
-  ],
+  "main": "utilities.js",
   "author": {
 	"name": "Fábio Henrique da Silva Viana",
 	"email": "fabioviana.bh@gmail.com",
