--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,18 @@
 {
   "name": "ng-jedi-utilities",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "homepage": "https://github.com/jediproject/ng-jedi-utilities",
   "authors": [
     "Fábio Henrique da Silva Viana <fabioviana.bh@gmail.com>"
   ],
   "description": "Utilities to make life easier on settings and other needs during development with angularjs.",
-  "main": ["utilities.js", "utilities-directives.js", "utilities-filters.js"],
+  "main": [
+    "utilities.js",
+    "utilities-directives.js",
+    "utilities-filters.js"
+  ],
   "dependencies": {
-	"ng-jedi-dialogs": "*"
+    "ng-jedi-dialogs": "*"
   },
   "moduleType": [
     "globals"
@@ -16,30 +20,30 @@
   "keywords": [
     "angular",
     "utilities",
-	"cors",
-	"cpf",
-	"cnpj",
-	"IIS",
-	"exceptionhandler",
-	"exception handler",
-	"modelstate",
-	"model state",
-	"translate",
-	"boolean to text",
-	"capitalize",
-	"validateequals",
-	"validate equals",
-	"fullscreen",
-	"full screen",
-	"dynamicdirective",
-	"dynamic directive",
-	"interpolate",
-	"interpolate directive",
-	"asyncvalidate",
-	"async validate",
-	"async validate directive",
-	"enter",
-	"If-Modified-Since"
+    "cors",
+    "cpf",
+    "cnpj",
+    "IIS",
+    "exceptionhandler",
+    "exception handler",
+    "modelstate",
+    "model state",
+    "translate",
+    "boolean to text",
+    "capitalize",
+    "validateequals",
+    "validate equals",
+    "fullscreen",
+    "full screen",
+    "dynamicdirective",
+    "dynamic directive",
+    "interpolate",
+    "interpolate directive",
+    "asyncvalidate",
+    "async validate",
+    "async validate directive",
+    "enter",
+    "If-Modified-Since"
   ],
   "license": "MIT"
 }
